ZenHub: Fix navigation overflow dropdown

--- a/github-dark.css
+++ b/github-dark.css
@@ -2626,7 +2626,8 @@
   .zhc-merge-repo-item:hover, .zhc-merge-repo-item--is-active,
   .zhc-badge--issue-count, .zhc-tooltip-action__item:hover,
   .zh-todolist-completed-separator, .zh-todolist-today-separator,
-  .zh-epic-issue-list-item-badge .zh-pipeline-badge, .zh-pipeline-badge-light {
+  .zh-epic-issue-list-item-badge .zh-pipeline-badge, .zh-pipeline-badge-light,
+  .zhc-dropdown-simple-item:hover {
     background: #333 !important;
   }
   .zh-epic-creator-tab.selected, .zh-pipeline-badge-light {
@@ -2647,7 +2648,8 @@
   .zhc-pipeline--new-placeholder .zhc-pipeline__head, .zhc-merge-repo-item,
   .zh-todopage-menu, .zh-select-menu-item, .zh-epic-issue-list-container ul,
   .zh-epic-creator-nav, .zh-epic-creator-picker-container, .zh-board-menu,
-  .zh-epic-creator-filters, .zh-epic-issues-picker-new-issue, .merge-status-list {
+  .zh-epic-creator-filters, .zh-epic-issues-picker-new-issue, .merge-status-list,
+  .zhc-dropdown-simple-item {
     border-color: #343434 !important;
   }
   .zhc-tooltip-action__content:before {
